--- a/index.html
+++ b/index.html
@@ -7,40 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js"></script>
 </head>
 
 <body>
-    <div class="container" style="background-color: aqua; width: fit-content;">
-        <div class="row-col-4 justify-content-center ">
-            <button type="button" class="btn btn-light">7</button>
-            <button type="button" class="btn btn-light">8</button>
-            <button type="button" class="btn btn-light">9</button>
-            <button type="button" class="btn btn-light">&times;</button>
+    <div class="container flex flex-col" >
+        <div class="row row-input">
+            <input type="text" class="input" autofocus placeholder="0">
         </div>
-        <div class="row-col-4 justify-content-center ">
-            <button type="button" class="btn btn-light">4</button>
-            <button type="button" class="btn btn-light">5</button>
-            <button type="button" class="btn btn-light">6</button>
-            <button type="button" class="btn btn-light">&minus;</button>
+        <div class="row">
+            <button type="button" class="btn">7</button>
+            <button type="button" class="btn">8</button>
+            <button type="button" class="btn">9</button>
+            <button type="button" class="btn">&times;</button>
         </div>
-        <div class="row-col-4 justify-content-center ">
-            <button type="button" class="btn btn-light">1</button>
-            <button type="button" class="btn btn-light">2</button>
-            <button type="button" class="btn btn-light">3</button>
-            <button type="button" class="btn btn-light">&plus;</button>
+        <div class="row">
+            <button type="button" class="btn">4</button>
+            <button type="button" class="btn">5</button>
+            <button type="button" class="btn">6</button>
+            <button type="button" class="btn">&minus;</button>
         </div>
-        <div class="row-col-4 justify-content-center ">
-            <button type="button" class="btn btn-light">0</button>
-            <button type="button" class="btn btn-light">.</button>
-            <button type="button" class="btn btn-light">clr</button>
-            <button type="button" class="btn btn-light">&equals;</button>
+        <div class="row">
+            <button type="button" class="btn">1</button>
+            <button type="button" class="btn">2</button>
+            <button type="button" class="btn">3</button>
+            <button type="button" class="btn">&plus;</button>
+        </div>
+        <div class="row">
+            <button type="button" class="btn">0</button>
+            <button type="button" class="btn">.</button>
+            <button type="button" class="btn">clr</button>
+            <button type="button" class="btn">&equals;</button>
         </div>
 
     </div>
