--- a/index.html
+++ b/index.html
@@ -6,43 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
-
-
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
 </head>
 
 <body>
-    <div class="container flex flex-col" >
-        <div class="row row-input">
-            <input type="text" class="input" autofocus placeholder="0">
+    <h1>Simple Calculator!</h1>
+    <div class="container flex flex-col">
+        <div class="row">
+            <input name="display" id="display" type="text" class="input" autofocus placeholder="0">
         </div>
         <div class="row">
-            <button type="button" class="btn">7</button>
-            <button type="button" class="btn">8</button>
-            <button type="button" class="btn">9</button>
-            <button type="button" class="btn">&times;</button>
+            <button type="button" class="btn" value="AC">AC</button>
+            <button type="button" class="btn" value="()">()</button>
+            <button type="button" class="btn" value="%">%</button>
+            <button type="button" class="btn" value="/">&divide;</button>
         </div>
         <div class="row">
-            <button type="button" class="btn">4</button>
-            <button type="button" class="btn">5</button>
-            <button type="button" class="btn">6</button>
-            <button type="button" class="btn">&minus;</button>
+            <button type="button" class="btn" value="7">7</button>
+            <button type="button" class="btn" value="8">8</button>
+            <button type="button" class="btn" value="9">9</button>
+            <button type="button" class="btn" value="*">&times;</button>
         </div>
         <div class="row">
-            <button type="button" class="btn">1</button>
-            <button type="button" class="btn">2</button>
-            <button type="button" class="btn">3</button>
-            <button type="button" class="btn">&plus;</button>
+            <button type="button" class="btn" value="4">4</button>
+            <button type="button" class="btn" value="5">5</button>
+            <button type="button" class="btn" value="6">6</button>
+            <button type="button" class="btn" value="-">&minus;</button>
         </div>
         <div class="row">
-            <button type="button" class="btn">0</button>
-            <button type="button" class="btn">.</button>
-            <button type="button" class="btn">clr</button>
-            <button type="button" class="btn">&equals;</button>
+            <button type="button" class="btn" value="1">1</button>
+            <button type="button" class="btn" value="2">2</button>
+            <button type="button" class="btn" value="3">3</button>
+            <button type="button" class="btn" value="+">&plus;</button>
+        </div>
+        <div class="row">
+            <button type="button" class="btn" value="0">0</button>
+            <button type="button" class="btn" value=".">.</button>
+            <button type="button" class="btn" value="CR">CR</button>
+            <!-- <button type="button" class="btn" value=""><img src="./images/backspace.svg" alt=""></button> -->
+            <button type="button" class="btn" value="=">&equals;</button>
         </div>
 
     </div>
+    <script src="./script.js"></script>
 </body>
 
 </html>
