--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
         <div class="row">
             <button type="button" class="btn" value="0">0</button>
             <button type="button" class="btn" value=".">.</button>
-            <button type="button" class="btn" value="CR">CR</button>
+            <!-- <button type="button" class="btn" value="CR">CR</button> -->
             <!-- <button type="button" class="btn" value=""><img src="./images/backspace.svg" alt=""></button> -->
-            <button type="button" class="btn" value="=">&equals;</button>
+            <button type="button" id="equals" class="btn" value="=">&equals;</button>
         </div>
-
     </div>
     <script src="./script.js"></script>
 </body>
