--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <marquee class="marq" >Work in progress</marquee>
     <h1>Simple Calculator!</h1>
     <div class="container flex flex-col">
         <div class="row">
